Fix spacing on playlist index

--- a/Spotify/app/assets/stylesheets/playlist_show.scss
+++ b/Spotify/app/assets/stylesheets/playlist_show.scss
@@ -49,7 +49,7 @@ ul.info {
   align-items: stretch;
 }
 
-.name, .duration, .url {
+.names, .duration, .url {
   margin: 20px;
 }
 
